fixes header text on mobile

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -28,6 +28,7 @@
   @include media-query($on-palm) {
     font-size: 26px;
     line-height: 38px;
+    width: 270px;
   }
 }
 .site-nav {
